<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#182430"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBackAyudaManual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_back"
            android:textSize="16sp"
            android:textColor="#31B7FF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/Title_Manual"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF" />

        <!-- Sección: ¿Qué es Sentri? -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/first_question"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_response"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />

        <!-- Sección: Cómo ver cámaras -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sec_question"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnVideoCamaras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/VideoCamaras"
            android:background="@drawable/boton_blanco_cuadrado"
            app:backgroundTint="@null"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sec_resp"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cam_question"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cam_resp"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cam_rstp_quest"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cam_rstp_resp"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cam_net_quest"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cam_net_resp"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />

        <!-- Sección: ¿Cómo veo mis grabaciones? -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/third_question"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />
        <Button
            android:id="@+id/btnVideoNVR1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/nvr_video1"
            android:background="@drawable/boton_blanco_cuadrado"
            app:backgroundTint="@null"
            android:textColor="#000000" />
        <Button
            android:id="@+id/btnVideoNVR2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/nvr_video2"
            android:background="@drawable/boton_blanco_cuadrado"
            app:backgroundTint="@null"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nvr_resp"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nvr_note"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />

        <!-- Sección: ¿Como funciona la IA? -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fourth_question"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <!-- Sección: Reportar un problema -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fifth_quest"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnVideoReportes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/btnVideoReports"
            android:background="@drawable/boton_blanco_cuadrado"
            app:backgroundTint="@null"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifth_resp"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />

        <!-- Sección: Sugerencias -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sixth_question"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnVideoSuger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/VideoSuger"
            android:background="@drawable/boton_blanco_cuadrado"
            app:backgroundTint="@null"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sixth_resp"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/consult_question"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnVideoConsul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/VideoConsul"
            android:background="@drawable/boton_blanco_cuadrado"
            app:backgroundTint="@null"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consult_resp"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/language_question"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnVideoLenguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/language_video"
            android:background="@drawable/boton_blanco_cuadrado"
            app:backgroundTint="@null"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_resp"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_note"
            android:textSize="14sp"
            android:textColor="#DDFFFFFF"
            android:layout_marginTop="4dp" />




    </LinearLayout>
</ScrollView>
