<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0F1318"
    android:padding="16dp">

    <!-- BOTÓN ATRÁS -->
    <TextView
        android:id="@+id/tvBackNvrCams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volver"
        android:textColor="#A0B4C0"
        android:textSize="18sp"
        android:padding="6dp"/>


    <!-- TÍTULO -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nvr_manag"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"/>

    <!-- INPUT NOMBRE -->
    <EditText
        android:id="@+id/etCamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nvr_cams_label_nombre"
        android:textColor="#FFFFFF"
        android:textColorHint="#6A7A89"
        android:background="@drawable/bg_input"
        android:padding="12dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"/>

    <!-- INPUT RTSP -->
    <EditText
        android:id="@+id/etCamRtsp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rtsp_hint"
        android:textColor="#FFFFFF"
        android:textColorHint="#6A7A89"
        android:background="@drawable/bg_input"
        android:padding="12dp"
        android:layout_marginBottom="15dp"
        android:inputType="text"/>

    <!-- BOTÓN GUARDAR -->
    <Button
        android:id="@+id/btnGuardarCam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nvr_cams_btn_guardar"
        android:textColor="#FFFFFF"
        android:background="#6A3FC6"
        android:padding="14dp"
        android:layout_marginBottom="20dp"/>

    <!-- LISTA DE CAMARAS -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListaCams"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
