<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#182430"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvBackAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BackSupport"
        android:textSize="16sp"
        android:textColor="#31B7FF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Queries"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/etConsultaServicio"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="#283549"
        android:padding="12dp"
        android:hint="@string/Consultar"
        android:textColor="#FFFFFF"
        android:textColorHint="#B0B0B0"
        android:inputType="textMultiLine"
        android:gravity="top|start" />

    <Button
        android:id="@+id/btnContactanos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:text="@string/SendBtn"
        android:background="@drawable/boton_blanco_cuadrado"
        app:backgroundTint="@null"
        android:textColor="#000000" />

</LinearLayout>